tests/errors/compiler/not_rowoffloat_in_stanfunc/int_in_send_float_to_robot.c
void main()
{
	int a;
	send_float_to_robot(a);
}
